--- a/source/index.html
+++ b/source/index.html
@@ -9,96 +9,78 @@
   <!-- Bootstrap стили CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div class="container-fluid p-0">
-    <section id="introduction">
+  <div class="container">
+    <header class="page-header ml-auto  mr-auto">
 
-      <div class="container">
-
-        <div class="row fill-viewport align-items-center">
-
-          <div class="col-12 col-md-6">
-            <h1 class="text-white">Coding on steroids</h1>
-            <p class="text-white lead">Stop hiring engineers to write your code. Just use the 1kb script that magically solves all your problems and algorithms.</p>
-            <a class="btn btn-primary" href="#" role="button">Try it yesterday</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="info--1">
-
-
-      <div class="container">
-
-        <div class="row pt-5 align-items-center">
-
-          <div class="col d-none d-md-block align-self-end">
-            <img src="http://bit.ly/2fyUtlS" class="img-fluid" />       </div>
-
-          <div class="col">
-
-            <h6 class="text-uppercase text-black-40">
-              million dollar info         </h6>
-
-            <h2>We do what our competitors do, but with 500% more</h2>
-
-            <p>Sed ut perspiciatis unde omnis iste natus error         sit voluptatem accusantium doloremque laudantium,         totam rem aperiam..</p>
-            <div class="row">
-              <div class="d-none d-md-block col">
-                <h5>killer feature</h5>
-                <p>veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                <a href="#" class="d-block">learn more</a>
-              </div>
-              <div class="d-none d-lg-block col">
-                <h5>second killer feature</h5>
-                <p>veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                <a href="#" class="d-block">learn more</a>
-              </div>
+      <div class="page-header__top row pb-2">
+        <div class="content-wrap col-8 ml-auto  mr-auto d-flex">
+            <div class="col-4 d-flex justify-content-between my-2">
+              <nav class="page-nav">
+                <a class="page-nav__relate px-2" href="">Главная</a>
+                <a class="page-nav__relate px-2" href="">Продукция</a>
+                <a class="page-nav__relate px-2" href="">Акции и скидки</a>
+              </nav>
             </div>
+            <div class="col-4 d-flex justify-content-center">
+              <button type="button" class="btn btn--consult px-4" href="">Обратиться за консультацией</button>
+            </div>
+            <div class="contacts col-4 d-flex justify-content-between my-2">
+              <a class="contacts__pass px-2" href="">Как проехать?</a>
+              <a class="contacts__phone px-2" href="tel:83532873195">8-3532-87-31-95</a>
+            </div>
+        </div>
+      </div>
+
+      <div class="page-header__bottom row py-2">
+        <div class="content-wrap col-8 ml-auto mr-auto d-flex">
+          <div class="col-3  d-flex align-items-center">
+            <img src="img/main-logo.png" class="main-logo" alt="Подкова 56" width="254" height="48">
+          </div>
+          <div class="col-7 d-flex align-items-center">
+            <nav class="main-nav">
+              <a href="" class="main-nav__item p-2">О компании</a>
+              <a href="" class="main-nav__item p-2">Наши работы</a>
+              <a href="" class="main-nav__item p-2">Готовые решения</a>
+              <a href="" class="main-nav__item p-2">Отзывы</a>
+              <a href="" class="main-nav__item p-2">Контакты</a>
+            </nav>
+          </div>
+          <div class="col-2 d-flex align-items-center">
+            <button type="button" class="btn btn--master px-3">Вызов замерщика</button>
           </div>
         </div>
       </div>
 
+    </header>
 
-    </section>
-    <section id="info-2" class="bg-dark">
-
-      <div class="container">
-
-        <div class="row align-items-center fill-80-viewport">
-
-          <div class="col-12 col-md-6 my-5 order-2 order-md-1">
-            <p class="text-uppercase text-white-40"><strong>faster development</strong></p>
-            <h2 class="text-white">Coding has never been this fast. It's almost magical</h2>
-            <p class="lead text-white-70">Stop hiring engineers to write your code. Just install one script that magically solves all your problems.</p>
-            <a class="btn btn-red d-block d-md-inline-block py-3" href="#" role="button">Read the docs</a>
-          </div>
-          <pre class="col-12 col-md-6 my-5 order-1 order-md-2 py-4 border border-info rounded text-info">
-            <span>1</span> <span> //codingSteroids.js</span> 
-            <span>2</span>
-            <span>3</span>   const data = {
-            <span>4</span>        "purpose": {
-            <span>5</span>        "getId": "#element",
-            <span>6</span>        "companyName": "coolStartup",
-            <span>7</span>      }
-            <span>8</span>    }
-            <span>9</span>     
-            <span>10</span>   function codingSteroids(  
-            <span>11</span>       data,
-            <span>12</span>       getSteroidsType
-            <span>13</span>   ) 
-            <span>14</span>     
-            <span>15</span>   function getSteroidsType() {
-            <span>16</span>     return "codeHellish!"
-            <span>17</span>   }
-            </pre>
+    <div class="example row">
+      <div class="content-wrap col-8 ml-auto  mr-auto d-flex flex-column align-items-start">
+        <div class="col-5 py-5">
+          <div class="example__text my-2">Более 100 примеров в&nbsp;портфолио</div>
+          <button type="button" class="btn btn--example px-3 my-2">Посмотреть наши работы</button>
         </div>
       </div>
-    </section>
+      <div class="slider">
+        <div class="slider__prev"></div>
+        <div class="slider__next"></div>
+        <button class="btn btn__details">Подробнее</button>
+        <div class="slider__list">
+          <div class="slide">
+            <img class="slide__img" src="img/slide-1.jpg" alt="" width="959" height="484">
+            <div class="slide__text">Автомобильные навесы от 1990 руб/м<sup>2</sup></div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div id="riquest"></div>
+    <div id="benefits"></div>
+    <div id="about-us"></div>
+  </div>
 </body>
 
 </html>
