--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+  <title>Подкова 56</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,7 +27,7 @@
             </nav>
           </div>
           <div class="col-4 d-flex justify-content-center">
-            <button type="button" class="btn btn--consult px-4" href="">Обратиться за консультацией</button>
+            <button type="button" class="btn btn--consult px-4">Обратиться за консультацией</button>
           </div>
           <div class="contacts col-4 d-flex justify-content-between my-2">
             <a class="contacts__pass px-2" href="">Как проехать?</a>
@@ -88,7 +88,7 @@
       <div class="content-wrap col-8 ml-auto  mr-auto">
 
         <div class="row mx-0">
-          <form class="riquest-form col-6" action="">
+          <form class="riquest-form col-6" action="#">
 
             <h2 class="riquest-form__title my-4">Бесплатный замер и дизайн проект!</h2>
 
@@ -235,7 +235,7 @@
             <div class="row">
               <div class="exampls__card card">
                 <a href="" class="card__you-tube">you-tube</a>
-                <img src="" alt="" width="" height="">
+                <img src="#" alt="" width="" height="">
                 <ul class="card__list">
                   <li class="card__item"></li>
                   <li class="card__item"></li>
@@ -433,8 +433,7 @@
         <div class="row">
           <button class="products__all btn">Показать всё</button>
         </div>
-      </div>
-      <!-- центровщик -->
+      </div><!-- центровщик -->
     </section>
 
     <section class="cost row">
@@ -487,6 +486,76 @@
           </div>
         </div>
       </div><!-- центровщик -->
+    </section>
+
+    <section class="comment row">
+      <div class="content-wrap col-8 ml-auto  mr-auto">
+        <h2 class="comment__title">Отзывы клиентов</h2>
+        <div class="row">
+          <div class="col-4">
+            <img class="comment__img" src="" alt="">
+          </div>
+          <div class="col-8">
+            <div class="comment__info">
+              <div class="comment__name">Антон Фролов</div>
+              <div class="comment__date">30 марта 2018</div>
+              <div class="comment__address">г. Оренбург, ул. Вагонная,87</div>
+              <p class="comment__text">Таким образом реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Не следует, однако забывать, что начало повседневной работы по формированию позиции требуют определения и уточнения дальнейших направлений развития. Равным образом постоянный количественный рост и сфера нашей активности ...</p>
+              <button class="comment__detail">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+         <div class="base-products__controls">
+            <button type="button" class="btn comment__prew">Предыдущий комментарий</button>
+            <button type="button" class="btn comment__control">Переключить комментарий</button>
+            <button type="button" class="btn comment__control">Переключить комментарий</button>
+            <button type="button" class="btn comment__control">Переключить комментарий</button>
+            <button type="button" class="btn comment__control">Переключить комментарий</button>
+            <button type="button" class="btn comment__control">Переключить комментарий</button>
+            <button type="button" class="btn comment__control">Переключить комментарий</button>
+            <button type="button" class="btn comment__next">Следующий комментарий</button>
+          </div>
+        </div>
+        <div class="row">
+          <button class="comment__all">Посмотреть все отзывы</button>
+        </div>
+      </div><!-- центровщик -->
+    </section>
+
+    <section class="message row">
+      <div class="content-wrap col-8 ml-auto  mr-auto">
+        <h2 class="message__title">Обращение руководителя</h2>
+        <div class="row">
+          <div class="col-4">
+            <img src="" alt="" class="message__photo">
+          </div>
+          <div class="col-8">
+            <p class="message__text">Таким образом реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Не следует, однако забывать, что начало повседневной работы по формированию позиции требуют определения и уточнения дальнейших направлений развития. Равным образом постоянный количественный рост и сфера нашей активности  позволяет оценить значение модели развития. Таким образом укрепление  и развитие структуры играет важную роль в формировании позиций, занимаемых участниками в отношении поставленных задач. Равным образом рамки и место обучения кадров позволяет оценить значение существенных финансовых и административных условий. С другой стороны укрепление и развитие структуры позволяет оценить значение соответствующий условий активизации. Товарищи! сложившаяся структура </p>
+            <div class="message__sign">Директор компании «Подкова56»</div>
+            <div class="message__name">Иванов Иван Иванович</div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="article row">
+      <div class="content-wrap col-8 ml-auto  mr-auto">
+
+      </div>
+    </section>
+
+    <section class="question row">
+      <div class="content-wrap col-8 ml-auto  mr-auto">
+
+      </div>
+    </section>
+
+    <section class="map row">
+      <div class="content-wrap col-8 ml-auto  mr-auto">
+
+      </div>
     </section>
 
   </div><!-- container -->
